gcc/testsuite/rust/rustc/ui/issues/issue-8767.rs
impl B { // { dg-error ".E0412." "" { target *-*-* } }
}

fn main() {
}

